--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,10 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+#AKS-HCI ignroes
+
+ENV/
+config.json
+discards.txt
+.pytest_cache/
